// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled basic render nested 1`] = `
<h1
  className="styled-H1-1f87tx4 styled-H1-r6dkuc1"
>
  hello world
</h1>
`;

exports[`styled name 1`] = `
<h1
  className="styled-H1-131pfth styled-H1-r6dkuc3"
>
  hello world
</h1>
`;

exports[`styled no dynamic 1`] = `
<h1
  className="styled-H1-ijh7uz styled-H1-r6dkuc0"
>
  hello world
</h1>
`;

exports[`styled with expressions 1`] = `
.glamor-0 {
  --styled-H1-1t8i2zo-0: 24;
}

<h1
  className="styled-H1-1t8i2zo glamor-0 styled-H1-r6dkuc2"
>
  hello world
</h1>
`;

exports[`styled writes the correct css 1`] = `
".styled-H1-ijh7uz {
    font-size: 12px
}
.styled-H1-1f87tx4 {
    font-size: 20px
}
.styled-H1-1f87tx4 span {
    color: blue
}
.styled-H1-1f87tx4 span:hover {
    color: green
}
.styled-H1-1f87tx4 span:hover:after {
    content: \\"after\\"
}
.styled-H1-1t8i2zo {
    font-size: var(--styled-H1-1t8i2zo-0)
}
.styled-H1-131pfth {
    name: FancyH1;
    font-size: 38px
}
html {
    background: pink
}
.css-14yvnlz {
    font-family: sans-serif;
    color: yellow;
    background-color: purple
}"
`;
